--- a/EventBrokerAndScopes/packages.config
+++ b/EventBrokerAndScopes/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="bbv.Common" version="7.1.12149.1635" targetFramework="net40-Client" />
   <package id="bbv.Common.EventBroker" version="7.1.12149.1635" targetFramework="net40-Client" />
-  <package id="Castle.Core" version="3.0.0.4001" />
+  <package id="Castle.Core" version="3.2.1" targetFramework="net40-Client" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40-Client" />
   <package id="Ninject.Extensions.bbvEventBroker" version="3.0.0.6" targetFramework="net40-Client" />
   <package id="Ninject.Extensions.ContextPreservation" version="3.0.0.8" targetFramework="net40-Client" />
   <package id="ninject.extensions.conventions" version="3.0.0.11" targetFramework="net40-Client" />
-  <package id="Ninject.Extensions.DependencyCreation" version="3.0.0.5" targetFramework="net40-Client" />
-  <package id="Ninject.Extensions.Factory" version="3.0.1.0" targetFramework="net40-Client" />
+  <package id="Ninject.Extensions.DependencyCreation" version="3.0.2-unstable-9007" targetFramework="net40-Client" />
+  <package id="Ninject.Extensions.Factory" version="3.0.2-unstable-9012" targetFramework="net40-Client" />
+  <package id="Ninject.Extensions.Interception" version="3.0.2-unstable-9031" targetFramework="net40-Client" />
+  <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.0.2-unstable-9031" targetFramework="net40-Client" />
   <package id="Ninject.Extensions.NamedScope" version="3.0.0.5" targetFramework="net40-Client" />
 </packages>
